BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/Elaborazione_Processo__c.object-meta.xml
<CustomObject>
    <label>Elaborazione Processo</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome Elaborazione Processo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Elaborazione Processi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>