BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/fields/Data_Elaborazione__c.field-meta.xml
<CustomField>
    <fullName>Data_Elaborazione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Elaborazione</label>
    <type>Date</type>
</CustomField>