BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/fields/Duration_Processo__c.field-meta.xml
<CustomField>
    <fullName>Duration_Processo__c</fullName>
    <description>Old version :

IF(
  Fine_processo__c - Inizio_processo__c &gt; 0 ,
  TEXT( FLOOR( MOD( (Fine_processo__c - Inizio_processo__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
  &amp; TEXT( ROUND( MOD( (Fine_processo__c - Inizio_processo__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes &quot;
  &amp; TEXT( ROUND( MOD( (Fine_processo__c - Inizio_processo__c ) * 24 * 60 * 60, 60 ), 0 ) ) &amp; &quot; seconds &quot;,
  &quot;&quot;
)</description>
    <formula>(Fine_processo__c-Inizio_processo__c)*24*60</formula>
    <label>Duration Processo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>