BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/fields/Elaborazione_Processo_Key__c.field-meta.xml
<CustomField>
    <fullName>Elaborazione_Processo_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Elaborazione Processo Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>