BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/fields/Fine_processo__c.field-meta.xml
<CustomField>
    <fullName>Fine_processo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fine processo</label>
    <type>DateTime</type>
</CustomField>