BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/fields/Inizio_processo__c.field-meta.xml
<CustomField>
    <fullName>Inizio_processo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inizio processo</label>
    <type>DateTime</type>
</CustomField>