BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/fields/Nome_tabella__c.field-meta.xml
<CustomField>
    <fullName>Nome_tabella__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome tabella</label>
    <length>255</length>
    <type>Text</type>
</CustomField>