BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/fields/Oggetto_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Oggetto_SFDC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oggetto SFDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>