BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/fields/Operazione_di_processo__c.field-meta.xml
<CustomField>
    <fullName>Operazione_di_processo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operazione di processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>