BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/fields/Record_Count_Input__c.field-meta.xml
<CustomField>
    <fullName>Record_Count_Input__c</fullName>
    <label>Record Count Input</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>