BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <formula>CASE( Name ,
&quot;Account_PTF&quot;,&quot;PTF&quot;,
&quot;Account_SC&quot;,&quot;SC&quot;,
&quot;Ldap__c&quot;,&quot;PTF&quot;,
&quot;RoleMDS__c&quot;,&quot;PTF&quot;,
&quot;StrutturaBanca__c&quot;,&quot;PTF&quot;
,&quot;CI/CRM&quot;)</formula>
    <label>Stream</label>
    <type>Text</type>
</CustomField>