BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/fields/Throughput__c.field-meta.xml
<CustomField>
    <fullName>Throughput__c</fullName>
    <description>Calculate the Throughput (#record input/ duration process) in rows/min</description>
    <formula>Record_Count_Input__c /Duration_Processo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculate the Throughput (#record input/ duration process) in rows/min</inlineHelpText>
    <label>Throughput</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>