BPER/DEVF/force-app/main/default/objects/Elaborazione_Processo__c/listViews/Tutte_le_vocei.listView-meta.xml
<ListView>
    <fullName>Tutte_le_vocei</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Data_Elaborazione__c</columns>
    <columns>Inizio_processo__c</columns>
    <columns>Fine_processo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutte le voci</label>
</ListView>